# otus-homework1

./: .travis.yml  CMakeLists.txt  lib.cpp  lib.h  main.cpp  tests.cpp
